crates/ddlog-syntax/tests/validation/fail/input_function.dl
// kind:item validate:true
extern input function foo() {}
